samples/_failures_safe/1761076977_784ee8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7a0d78d.c: In function ‘main’:
./samples/SAFE/__tmp_c7a0d78d.c:135:13: error: expected declaration or statement at end of input
  135 |             printf("Compression failed\n");
      |             ^~~~~~
./samples/SAFE/__tmp_c7a0d78d.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7a0d78d.c:135:13: error: expected declaration or statement at end of input
